<resources>
    <string name="app_name">Yavatmal In My Pocket</string>
    <string name="action_settings">Settings</string>
    <string name="banner_ad_dummy_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9016057534718300/2635108673</string>
    <string name="log_error_updating_data">Error updating data: </string>
    <string name="log_error_the_read_failed">The read failed: </string>
    <string name="log_error_occurred">"Error occurred: "</string>
    <string name="action_tc">Terms &amp; Conditions</string>
    <string name="action_share_button">Share</string>
    <string name="action_business">Register Your Business</string>
    <string name="action_contact_us">Contact Us</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="button_create_account">Sign Up</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_signin_with_google">SIGN IN WITH GOOGLE</string>
    <string name="button_signin_with_password">SIGN IN</string>
    <string name="button_signin_without_password">CONTINUE WITHOUT SIGN IN</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_username">Enter your name</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="image_view_logo_image">Logo Image</string>
    <string name="button_logout">Logout</string>
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_authenticating_with_firebase">Authenticating with Database…</string>
    <string name="progress_dialog_creating_user_with_firebase">Attempting to create account…</string>
    <string name="progress_dialog_check_inbox">Please check your inbox for your password</string>
    <string name="dialog_title_error">Error</string>
    <string name="error_message_failed_sign_in_no_network">There was a problem with the network connection.\nAre you sure you\'re connected to the internet?</string>
    <string name="log_error_invalid_provider">"Invalid provider: "</string>
    <string name="log_error_failed_to_change_password">"Failed to change the password: "</string>
    <string name="error_invalid_email_not_valid">%s is not a valid email</string>
    <string name="error_message_email_issue">There was an error with your email; please check that you entered it correctly.</string>
    <string name="error_you_didnt_give_permissions">You must give ShoppingList++ permission to access your Google account information if you want to use Google sign-in.</string>
    <string name="error_email_taken">The email is already taken.</string>
    <string name="error_invalid_password_not_valid">Please enter a password that is at least 6 characters long.</string>
    <string name="error_cannot_be_empty">This cannot be empty.</string>
    <string name="google_error_recoverable_oauth_error">"Recoverable Google OAuth error: "</string>
    <string name="google_error_google_play_services_not_available">Google Play Services are not available.</string>
    <string name="google_error_trying_to_connect_google_api">Trying to connect to Google API</string>
    <string name="google_error_auth_with_google">"Error authenticating with Google: "</string>
    <string name="google_error_network_error">"Network error: "</string>
    <string name="google_error_cant_connect_to_api">Are you sure that you set up a project for your app?
        Check out : https://console.developers.google.com/project. Also make sure you have all the proper
    gradle dependencies</string>
    <string name="pref_language_label">Select Language</string>
    <string name="pref_language_label_english">English</string>
    <string name="pref_language_label_marathi" translatable="false">Marathi</string>
    <string name="pref_language_key" translatable="false">language</string>
    <string name="pref_language_english" translatable="false">english</string>
    <string name="pref_language_marathi" translatable="false">marathi</string>
    <string name="pref_language_label_hindi">Hindi</string>
    <string name="oauth2_format">oauth2:%s</string>
    <string name="log_message_password_changed_successfully">Password changed successfully from temporary password to </string>
    <string name="log_message_auth_successful">auth successful.</string>
    <string name="text_current_temperature">Current Temperature</string>
    <string name="text_current_temp_not_available">Not Available</string>
    <string name="text_directory">Directory</string>
    <string name="text_emergency">Emergency</string>
    <string name="text_bus_timings">Bus Timings</string>
    <string name="text_tour_spots">Tour Spots</string>
    <string name="text_about_ytl">About Yavatmal</string>
    <string name="text_nearby">Near By Places</string>
    <string name="text_news">Todays Headlines</string>
    <string name="list_hotels_lodges">Hotels and Lodges</string>
    <string name="list_banks">Banks</string>
    <string name="list_coaching_institutes">Coaching Institutes</string>
    <string name="list_tours_travels">Tours and Travels</string>
    <string name="list_function_halls">Function Halls</string>
    <string name="list_hospitals">Hospitals</string>
    <string name="list_educational_institutes">Educational Institutes</string>
    <string name="list_medicals">Medicals</string>
    <string name="list_govt_offices">Government Offices</string>
    <string name="list_press">Press</string>
    <string name="list_railways">Railways</string>
    <string name="list_police_station">Police Station</string>
    <string name="detail_weather_desc">Description</string>
    <string name="detail_weather_temp">Temperature</string>
    <string name="detail_weather_humidity">Humidity</string>
    <string name="detail_weather_wind_speed">Wind Speed</string>
    <string name="ytl_intro">Yavatmal is a city and municipal council of the Yavatmal district in the Indian state of Maharashtra. The name is derived from the Marathi Yavat (mountain) and mal (row). It is the head of a Yavatmal district and a huge marketplace</string>
    <string name="ytl_history"><b>History\n\n</b>Formerly known as \"Yeoti\" or \"Yeotmal\", Yavatmal City was the main town of the Berar Sultanate and according to old writings \"the safest place in the world\". The then region of Yavatmal (now Yavatmal district), was part of the dominion of Aladdin Hassan Bahman Shah who founded the Bahmani Sultanate in 1347. In 1572, Murtaza Shah ruler of the Ahmadnagar Sultanate (now another district of Maharashtra state also referred as \"Nagar\"), annexed the Yavatmal district, then in 1596, Chand Bibi, warrior queen of Ahmadnagar, ceded the district of Yavatmal to the Mughal Empire, rulers of a large part of India. Following the death of the sixth Mughal Emperor Aurangzeb in 1707, Yavatmal was passed on to the Maratha Empire. When Raghoji I Bhonsle became ruler of the Nagpur kingdom in 1783, he included the Yavatmal district in his territory. After the British East India Company created Berar Province in 1853, Yavatmal became part of East Berar District in 1863 and later part of the South East Berar district,
        both districts of the Central Provinces and Berar. Yavatmal remained part of Madhya Pradesh until the 1956 reorganisation of states when it was transferred to the state of Mumbai (Bombay). With the creation of the Maharashtra state on 1 May 1960, Yavatmal district became a part of it.
        The district has given two chief ministers to the Maharashtra state, Vasantrao Naik and Sudhakarrao Naik along with many other
        politicians and personalities such as freedom-fighter Loknayak Bapuji Ane and social worker Babaji Datey, Congress Party MLA
        Mr.Ali Hasan Mamdani and social activist Mrs Hanifa Mamdani. Post-independence, the district of Yavatmal consistently
        favoured the Congress Party in its political leanings[citation needed] with state government representatives (MLAs) and
        central government representatives (MPs) elected by the people of Yavatmal coming largely from the Congress Party.
        In the 1990s, the trend reversed with the election of members of the Bharatiya Janata Party (BJP) to the prominent
        positions of MP and MLAs to represent Yavatmal both at state and central government levels.the current MP of yavatmal
        is Bhawna gavel</string>
    <string name="ytl_demographics"><b>Demographics\n\n</b>Yavatmal city is administered by a municipal council (category-A).
        According to census 2011, its population is nearly 138, 464.But this figure is a number of inhabitants within municipal
        boundaries. Urbanisation has crossed municipal boundaries and neighbouring village\’s viz. Wadgaon road, Lohara,
        Umarsara, Waghapur, Moha, Lohara, Bhosa, Pimpalgaon, Pangari, Bhoyar, Parwa, Bhari, and Madkona have become part
        of urban agglomeration having population nearing 3.57 lacs</string>
    <string name="ytl_economy"><b>Economy\n\n</b>Yavatmal town is also known as \"Cotton City\" and during British rule
        was classified as a hill station. Both cotton ginning and pressing are carried on in Yavatmal while the town is also the
        chief trading centre in the district, and connected by road with Dhamangaon station, 29 miles (47 km) away. Major business
        establishments in Yavatmal include the Raymonds factory which produces special fibre for jeans. There is a brand new
        106-acre (0.43 km2) textile Special Economic Zone (SEZ) under construction while HLL Unilever has also decided to
        restart the plant they currently have in the city. Yavatmal\'s younger generation is slowly joining the 21st-century
        workforce and there are a number of computer learning centres and educational institutes. Other local businesses in
        the town are dominated by the presence of agricultural supply facilities used by the nearby farming community.
        Banking services are available in the Yavatmal, Ner, Pusad, Digras, Ghatanji and Pandharkawada and Wani areas.\n
The major industrial centres are at MIDC Lohara, Darwha, Digras, Pusad, Umerkhed, Wani, Umari, Pandharkawada,
    Ralegaon and Babhulgaon, Ner, and Wani-Maregaon with the main market places in Yavatmal City, Wani, Darwha, Digras,
    Akola Bazar, Ghatanji, Mohada, Pusad, Umerkhed, Arni and Pandharkawada.
</string>
    <string name="ytl_culture">The principal language of Yavatmal district is Marathi. However, since the district
        has numerous Scheduled and Nomadic Tribes, various other languages are also spoken in the form of Gormati or Banjari,
        Gondi, Hindi, Sindhi Marwari, Telugu and kolami.\nIn 1973 the Marathi Sahitya Sammelan, (Marathi Literature Conference) took place in Yavatmal city presided over
    by Gajanan Digambar Madgulkar.\nThe district has various entrenched cultures and has India\'s most ancient tribal communities  – the Gond Raja, Gond
    Pardhan, Kolam, Aandh and Banjara amongst others.\nVarious Hindu fairs take place in the district including:\nMaroti and Gajanan Maharaj Fair in Ghatanji\nShri Chintamani Fair at Kalamb\nShri Dutt Jayanti Fair at Mahur\nThe Jambhora and Mahashiv Ratri in Wani, Pusan and Mahagaon\nShri Rangnaath Swamy in Wani 6. Amba Devi, Kelapur\nBaba kambalposh fair, Arni\nFakiraji Maharaj Fair, Dhanaj Manikwada\nYavatmal also has the liberal culture in both its urban and rural areas and experiences fairs such as the Ghanti Baba ka Uroos in Digras and Uroos in Aarni.\nFestivals like Diwali, Dasara, Bakari-Eid, Ramzaan Eid, Gudi Padwa and almost all Hindu-Muslim occasions are celebrated. The district is also home to a Buddhist community. NAVARATRI is also the traditional festival in Yavatmal.\n

</string>
</resources>