<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".ui.MainActivity">
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_register_business"
          android:title="@string/action_business"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_tc"
          android:title="@string/action_tc"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_contact_us"
          android:title="@string/action_contact_us"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_share_app"
          android:title="@string/action_share_button"
          android:orderInCategory="100"
          app:showAsAction="ifRoom"
          android:icon="@android:drawable/ic_menu_share"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/button_logout"
        android:visible="true"
        app:showAsAction="never" />
</menu>
