<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_alignParentBottom="true"/>

        <ViewFlipper
            android:id="@+id/viewflipper_ytl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoStart="true"
            android:flipInterval="3000">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/img_mc"
            android:scaleType="fitXY"
            android:layout_margin="8dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/img_shakuntala"
            android:scaleType="fitXY"
            android:layout_margin="8dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/img_busstand"
            android:scaleType="fitXY"
            android:layout_margin="8dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/img_sakubridge"
            android:scaleType="fitXY"
            android:layout_margin="8dp"/>
        </ViewFlipper>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewflipper_ytl"
            android:layout_above="@id/adView6"
            android:paddingBottom="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:id="@+id/ytl_textview1"
                    android:text="@string/ytl_intro"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:id="@+id/ytl_textview2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:id="@+id/ytl_history"
                    android:text="@string/ytl_history"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:id="@+id/ytl_textview3"
                    android:text="@string/ytl_demographics"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:id="@+id/ytl_textview4"
                    android:text="@string/ytl_economy"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:id="@+id/ytl_textview_transport"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:id="@+id/ytl_textview9"
                    android:text="Language and Culture"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:id="@+id/ytl_textview8"
                    android:text="@string/ytl_culture"/>

            </LinearLayout>
        </ScrollView>
</RelativeLayout>